--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -48,6 +48,13 @@ Version:	1.1
 /*=============================
 	Global CSS 
 ===============================*/
+html, body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
 	font-weight: 400;
