--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3320,7 +3320,8 @@ body{
 	border: none;
 }
 .contact-us .form .btn {
-	background-color: #2196F3;
+	padding: 8px 0px;
+	background-color: #47ab14;
 	display: inline-block;
 	margin-right: 10px;
 	color: #fff;
@@ -4185,12 +4186,12 @@ body{
 	Start patient-form CSS
 ===========================*/
 #page-1{
-    background-color: #e3f2fd;
+    background-color: #e9f5d9;
 	min-height: 100vh;
 }
 
 #page-2{
-    background-color: #e3f2fd;
+    background-color: #e9f5d9;
     font-family: 'Segoe UI', sans-serif;
     color: #333333;
     margin: 0;
@@ -4222,7 +4223,7 @@ body{
 }
 
 .card-header {
-  background-color: #1976d2;
+  background-color: #4caf50;
   color: #ffffff;
   font-size: 1.5rem;
   font-weight: 600;
@@ -4242,10 +4243,22 @@ body{
 
 .card-footer {
   display: flex;
+  flex-direction: row;
   justify-content: flex-end;
   gap: 0.75rem;
   padding: 1rem 1.5rem;
   background-color: #f1f8ff;
+}
+
+@media screen and (max-width: 480px) {
+	.card-footer{
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		gap: 0.75rem;
+		padding: 1rem 1.5rem;
+		background-color: #f1f8ff;
+	}
 }
 
 .btn {
