--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4291,3 +4291,21 @@ body{
 /*=========================
 	End patient-form CSS
 ===========================*/
+
+/*=========================
+	Start admin-panel CSS
+===========================*/
+.Admin-panel{
+	padding: 2rem;
+	min-height: 100vh;
+	background-color: #e9f5d9;
+}
+
+.product-panel{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+/*=========================
+	End admin-panel CSS
+===========================*/
