--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -19,13 +19,22 @@
   }
 }
 
+.sidebar {
+  background-color: #d2f5c2;
+}
+
 .sidebar .nav-link {
   font-size: .875rem;
   font-weight: 500;
 }
 
 .sidebar .nav-link.active {
-  color: #2470dc;
+  background-color: #47ab14;
+  color: #ffffff;
+}
+
+.nav-link.active .bi {
+  fill: #ffffff !important
 }
 
 .sidebar-heading {
@@ -46,3 +55,8 @@
 .navbar .form-control {
   padding: .75rem 1rem;
 }
+
+.table-header {
+  background-color: #47ab14;
+}
+
