--- a/public/css/dashboard.rtl.css
+++ b/public/css/dashboard.rtl.css
@@ -25,7 +25,12 @@
 }
 
 .sidebar .nav-link.active {
-  color: #2470dc;
+  background-color: #47ab14;
+  color: #ffffff;
+}
+
+.nav-link.active .bi {
+  fill: #ffffff !important
 }
 
 .sidebar-heading {
@@ -39,7 +44,7 @@
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
-  background-color: rgba(0, 0, 0, .25);
+  background-color: black;
   box-shadow: inset 1px 0 0 rgba(0, 0, 0, .25);
 }
 
